Prevent <code> tags to be cut with a white space on two lines

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -74,6 +74,7 @@ code{
 	padding:2px 4px;
 	background-color:#f5f5f5;
 	font-size:14px;
+	white-space:nowrap;
 }
 ul,ol{
 	padding-left:20px;
